# projet-m1i3d-asteroid

./: .gitignore  CMakeLists.txt  README.md
documents/rapport/: rapport.tex
include/: Game.hpp  Logger.hpp  Player.hpp  Renderer.hpp  Settings.hpp  Transformable.hpp  Utils.hpp
include/Engine/: Logger.hpp  Settings.hpp  Transformable.hpp  Utils.hpp
include/Engine/Observer/: KeyboardEventData.hpp  Observer.hpp  Subject.hpp
include/Engine/Physic/: PhysicEngine.hpp  PhysicEntity.hpp
include/Engine/Rendering/: Polygon.hpp  Renderer.hpp
include/Engine/Types/: Circle.hpp  Color.hpp  Mat3.hpp  Rect.hpp  Vec2.hpp
include/Engine/gui/: Anchor.hpp  Entity.hpp  GUIRenderer.hpp  Gui.hpp  Renderer.hpp
include/Engine/gui/Entities/: Panel.hpp  Text.hpp
include/Entities/: Asteroid.hpp  Asteroids.hpp  Player.hpp  Shot.hpp
include/Game/: Game.hpp
include/Game/Entities/: Asteroid.hpp  Asteroids.hpp  Player.hpp  Shot.hpp
include/Observer/: Observer.hpp  Subject.hpp
include/Physic/: PhysicEngine.hpp  PhysicEntity.hpp
include/Rendering/: Polygon.hpp  Renderer.hpp
include/Types/: Circle.hpp  Color.hpp  Mat3.hpp  Rect.hpp  Vec2.hpp
include/gui/: Entity.hpp  GUIRenderer.hpp  Gui.hpp  Panel.hpp  Text.hpp
include/gui/Entities/: Panel.hpp  Text.hpp
poc/: CMakeLists.txt
poc/particles/: CMakeLists.txt
poc/particles/include/ParticleSystem/: BaseParticle.hpp  Particle.hpp  ParticleEmitter.hpp
poc/particles/include/ParticleSystem/Policies/: BaseInitializationPolicy.hpp  BaseUpdatePolicy.hpp  InitializationPolicy.hpp  UpdatePolicy.hpp
poc/particles/src/: main.cpp
src/: Game.cpp  Logger.cpp  Player.cpp  Renderer.cpp  Transformable.cpp  main.cpp
src/Engine/: Logger.cpp  Transformable.cpp
src/Engine/Physic/: PhysicEngine.cpp  PhysicEntity.cpp
src/Engine/Rendering/: GUIRenderer.cpp  Polygon.cpp  Renderer.cpp
src/Engine/Types/: Color.cpp  Polygon.cpp
src/Engine/gui/: Entity.cpp  GUIRenderer.cpp  Gui.cpp
src/Engine/gui/Entities/: Panel.cpp  Text.cpp
src/Entities/: Asteroid.cpp  Asteroids.cpp  Player.cpp
src/Game/: Game.cpp  main.cpp
src/Game/Entities/: Asteroid.cpp  Asteroids.cpp  Player.cpp
src/Physic/: PhysicEngine.cpp  PhysicEntity.cpp
src/Rendering/: GUIRenderer.cpp  Polygon.cpp  Renderer.cpp
src/Types/: Color.cpp
src/gui/: Entity.cpp  GUIRenderer.cpp  Gui.cpp  Panel.cpp  Text.cpp
src/gui/Entities/: Panel.cpp  Text.cpp
